--- a/playtopia/src/app/main/main.component.html
+++ b/playtopia/src/app/main/main.component.html
@@ -17,23 +17,23 @@
             alt="World_of_Warcraft_Wrath_of_the_Lich_King"
           />
         </a>
-          <p>World of Warcraft: Wrath of the Lich King</p>
+        <p>World of Warcraft: Wrath of the Lich King</p>
       </li>
       <li>
         <a routerLink="/details">
-        <img
-          src="https://cdn.europosters.eu/image/1300/posters/the-last-of-us-2-ellie-i76718.jpg"
-          alt="The_Last_Of_Us"
-        />
-      </a>
+          <img
+            src="https://cdn.europosters.eu/image/1300/posters/the-last-of-us-2-ellie-i76718.jpg"
+            alt="The_Last_Of_Us"
+          />
+        </a>
         <p>The Last Of Us Part 2</p>
       </li>
       <li>
         <a routerLink="/details">
-        <img
-          src="https://upload.wikimedia.org/wikipedia/en/d/d2/Don%27t_Starve_cover.jpg"
-          alt="Don't_Starve"
-        />
+          <img
+            src="https://upload.wikimedia.org/wikipedia/en/d/d2/Don%27t_Starve_cover.jpg"
+            alt="Don't_Starve"
+          />
         </a>
         <p>Don't Starve</p>
       </li>
@@ -41,56 +41,16 @@
   </div>
 
   <div class="popular-games-title">
-    <h2>OTHER GAMES</h2>
+    <h2>Latest Games</h2>
   </div>
 
   <div>
     <ul class="other-games-row">
-      <li>
+      <li *ngFor="let latesGame of latestGames">
         <a routerLink="/details">
-        <img
-          src="https://gameday.bg/wp-content/uploads/2020/11/nier-automata-goty-pc-01.jpg"
-          alt="Nier_Automata"
-        />
+          <img [src]="latesGame.game_img" [alt]="latesGame.game_name" />
         </a>
-        <p>Nier: Automata</p>
-      </li>
-
-      <li>
-        <a routerLink="/details">
-        <img
-          src="https://blog.playstation.com/uploads/2024/01/bb4d6dc48cb2b4613432dfc197c0081a26474c2c.jpeg"
-          alt="Horizon_Forbidden_West"
-        />
-        </a>
-        <p>Horizon Forbidden West</p>
-      </li>
-      <li>
-        <a routerLink="/details">
-        <img
-          src="https://s3.amazonaws.com/prod-media.gameinformer.com/styles/product_box_art/s3/2018/07/26/a87590d4/uncharted4.jpg"
-          alt="Uncharted_4"
-        />
-        </a>
-        <p>Uncharted 4</p>
-      </li>
-      <li>
-        <a routerLink="/details">
-        <img
-          src="https://cdn1.epicgames.com/offer/3ddd6a590da64e3686042d108968a6b2/EGS_GodofWar_SantaMonicaStudio_S2_1200x1600-fbdf3cbc2980749091d52751ffabb7b7_1200x1600-fbdf3cbc2980749091d52751ffabb7b7"
-          alt="God_Of_War"
-        />
-        </a>
-        <p>God of War</p>
-      </li>
-      <li>
-        <a routerLink="/details">
-        <img
-          src="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077_CDPROJEKTRED_S2_03_1200x1600-b1847981214ac013383111fc457eb9c5"
-          alt="Cyberpunk_2077"
-        />
-        </a>
-        <p>Cyberpunk 2077</p>
+        <p>{{ latesGame.game_name }}</p>
       </li>
     </ul>
   </div>
