--- a/playtopia/src/app/about/about.component.html
+++ b/playtopia/src/app/about/about.component.html
@@ -1,25 +1,23 @@
 <body>
-    <main>
-      <div class="article">
-        <h1>AB</h1>
-        <h1>OUT US</h1>
+  <main>
+    <div class="article">
+      <h1>AB</h1>
+      <h1>OUT US</h1>
+    </div>
+    <div class="about_container">
+      <img src="../../assets/About_us_Baner.png" alt="" />
+      <div>
+        <p>
+          Welcome to our game marketplace! Dive into our extensive collection of
+          games available for purchase and sale. Connect with fellow gamers,
+          exchange experiences, and stay updated with the latest gaming trends.
+          Whether you're a seasoned player or new to the scene, our platform
+          caters to all levels of enthusiasts. From classic favorites to the
+          latest releases, find a diverse range of titles to explore. Join our
+          vibrant community today to buy and sell games with ease and kickstart
+          your gaming adventure!
+        </p>
       </div>
-      <div class="about_container">
-        <img src="../../assets/About_us_Baner.png" alt="" />
-        <div>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt illo
-            reprehenderit nisi nam tenetur ea similique aut repudiandae ratione
-            eveniet! Omnis aut iste, exercitationem minus corrupti eum dolor
-            corporis officia quam distinctio hic quasi fugit excepturi ipsam,
-            quidem reprehenderit ut maxime voluptates optio cupiditate
-            consequuntur nisi eligendi. Eaque voluptatibus in eos commodi
-            dignissimos ut libero dolorem magni debitis. Sunt nostrum quidem aut
-            alias. Consequatur modi nemo, excepturi maiores cumque commodi aut,
-            aperiam cupiditate quia, fugiat nam eius accusantium consectetur
-            obcaecati.
-          </p>
-        </div>
-      </div>
-    </main>
-  </body>
+    </div>
+  </main>
+</body>
