--- a/playtopia/src/app/game/detail/detail.component.html
+++ b/playtopia/src/app/game/detail/detail.component.html
@@ -1,28 +1,28 @@
 <body>
-    <main>
+  <main>
     <div class="image">
-        <img
+      <img
         src="https://www.metacritic.com/a/img/catalog/provider/6/3/6-1-677752-13.jpg"
         alt="Overwatch_2"
-        />
+      />
     </div>
 
     <div class="description">
-        <h2>Overwatch 2</h2>
-        <p>Genre: Action</p>
-        <p>
-        Description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores
-        commodi magni expedita, dolorem nobis eos praesentium? Vitae ad magnam
-        voluptates. Et, dignissimos magnam ipsa molestiae rem, excepturi nihil
-        debitis incidunt repellat neque quis maiores dolorum ipsum libero
-        laboriosam id doloremque officia! Sint nostrum aspernatur iusto
-        tempora libero.
-        </p>
-        <p>Price: 60 $</p>
-        <div class="buttons">
+      <h2>Overwatch 2</h2>
+      <p>Genre: Action</p>
+      <p>
+        Description: Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Maiores commodi magni expedita, dolorem nobis eos praesentium? Vitae ad
+        magnam voluptates. Et, dignissimos magnam ipsa molestiae rem, excepturi
+        nihil debitis incidunt repellat neque quis maiores dolorum ipsum libero
+        laboriosam id doloremque officia! Sint nostrum aspernatur iusto tempora
+        libero.
+      </p>
+      <p>Price: 60 $</p>
+      <div class="buttons">
         <button>Add to cart</button>
         <button><i class="fas fa-heart" style="color: red"></i></button>
-        </div>
+      </div>
     </div>
-    </main>
+  </main>
 </body>
