--- a/playtopia/src/app/game/store/store.component.css
+++ b/playtopia/src/app/game/store/store.component.css
@@ -92,3 +92,6 @@ body {
   text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 2px 0 #fff,
     1px 1px 0 #fff;
 }
+.search_bar input {
+  color: white;
+}
