--- a/playtopia/src/app/game/store/store.component.html
+++ b/playtopia/src/app/game/store/store.component.html
@@ -59,7 +59,7 @@
         <div class="search_bar">
           <input #searchParams type="text" placeholder="Search..." />
           <button (click)="searchHandler(searchParams.value)">
-            <i class="fas fa-search"></i>
+            <i><img src="../../../assets/Search_icon.png" alt="Search"></i>
           </button>
         </div>
       </div>
