--- a/playtopia/src/app/game/store/store.component.css
+++ b/playtopia/src/app/game/store/store.component.css
@@ -17,7 +17,7 @@ body {
 }
 
 .search_panel div {
-  margin: 0px 20px;
+  margin: 0px 10px;
   cursor: pointer;
   color: white;
 }
@@ -94,4 +94,8 @@ body {
 }
 .search_bar input {
   color: white;
+  margin-right:10px ;
+}
+i img{
+  width: 25px;
 }
