Created Details Function

--- a/playtopia/src/app/game/store/store.component.html
+++ b/playtopia/src/app/game/store/store.component.html
@@ -59,7 +59,7 @@
         <div class="search_bar">
           <input #searchParams type="text" placeholder="Search..." />
           <button (click)="searchHandler(searchParams.value)">
-            <i><img src="../../../assets/Search_icon.png" alt="Search"></i>
+            <i><img src="../../../assets/Search_icon.png" alt="Search" /></i>
           </button>
         </div>
       </div>
@@ -74,7 +74,7 @@
       <h2 *ngIf="games.length === 0" class="store_title">No Games yet!</h2>
       <ul class="other-games-row">
         <li *ngFor="let game of games">
-          <a routerLink="/details">
+          <a routerLink="/details/{{ game._id }}">
             <img [src]="game.game_img" [alt]="game.game_name" />
           </a>
           <p>{{ game.game_name }}</p>
