--- a/playtopia/src/app/game/detail/detail.component.html
+++ b/playtopia/src/app/game/detail/detail.component.html
@@ -11,7 +11,7 @@
       <p>Price: {{ game.price }} $</p>
       <div class="buttons">
         <button>Add to cart</button>
-        <button><i class="fas fa-heart" style="color: red"></i></button>
+        <button><i><img src="../../../assets/Heart_White.png" alt="Like"></i></button>
       </div>
     </div>
   </main>
