--- a/playtopia/src/app/game/detail/detail.component.css
+++ b/playtopia/src/app/game/detail/detail.component.css
@@ -36,7 +36,7 @@ h6 {
 }
 
 button {
-  margin-top: 50px;
+  margin: 50px 10px 0px 0px;
   font-size: 40px;
   border: 5px solid rgb(0, 0, 0);
   border-radius: 20px;
@@ -54,7 +54,7 @@ button:hover {
   color: #000000;
   cursor: pointer;
 }
-button img{
+button img {
   width: 40px;
   margin: 0px;
 }
