--- a/playtopia/src/app/game/detail/detail.component.css
+++ b/playtopia/src/app/game/detail/detail.component.css
@@ -67,3 +67,26 @@ button img {
     2px 2px 0 #ffffff;
   color: #000000;
 }
+.button-container {
+  display: flex;
+  align-items: center; /* Vertically center items */
+}
+
+/* Optional: Add some spacing between the buttons */
+.button-container button {
+  margin-right: 10px;
+}
+
+/* Optional: Adjust styles for the like button container */
+.like-container {
+  display: flex;
+  align-items: center;
+}
+
+.count{
+  padding: 0px 10px 3px 10px;
+  margin: 65px 10px 10px 0px;
+  font-size: 40px;
+  border: 5px solid rgb(0, 0, 0);
+  border-radius: 20px;
+}
