--- a/playtopia/src/app/game/detail/detail.component.html
+++ b/playtopia/src/app/game/detail/detail.component.html
@@ -12,23 +12,17 @@
       </p>
       <p><span class="genre-label">Price: </span>{{ game.price }} $</p>
       <div class="buttons" *ngIf="user_id">
-        <div *ngIf="user_id !== game._ownerId">
-          <button>Add to cart</button>
-          <button>
-            <i (click)="LikeHandler()">
-              <img
-                *ngIf="!isLiked"
-                src="../../../assets/Heart_White.png"
-                alt="Like"
-              />
-              <img
-                *ngIf="isLiked"
-                src="../../../assets/Heart_Red.png"
-                alt="Like"
-              />
-              <p>{{ likesCount }}</p>
-            </i>
-          </button>
+        <div *ngIf="user_id !== game._ownerId" class="button-container">
+          <button class="add-to-cart-button">Add to cart</button>
+          <div class="like-container">
+            <button class="like-button" (click)="LikeHandler()">
+              <i>
+                <img *ngIf="!isLiked" src="../../../assets/Heart_White.png" alt="Like" />
+                <img *ngIf="isLiked" src="../../../assets/Heart_Red.png" alt="Like" />
+              </i>
+            </button>
+            <p class="count">{{ likesCount }}</p>
+          </div>
         </div>
       </div>
       <div class="buttons" *ngIf="user_id === game._ownerId">
