--- a/playtopia/src/app/main/main.component.html
+++ b/playtopia/src/app/main/main.component.html
@@ -31,6 +31,7 @@
         </a>
         <p>{{ latesGame.game_name }}</p>
       </li>
+      <button routerLink="/store">Go to The Store</button>
     </ul>
   </div>
 </main>
