Display error when post req fails

--- a/playtopia/src/app/user/register/register.component.html
+++ b/playtopia/src/app/user/register/register.component.html
@@ -98,6 +98,7 @@
               </p>
             </ng-container>
           </ng-container>
+          <p class="error" *ngIf="errorMessage">{{ errorMessage }}</p>
           <button id="button">Register</button>
         </form>
         <p>Already have an account ?</p>
