Small html and css changes

--- a/playtopia/src/app/core/nav/nav.component.html
+++ b/playtopia/src/app/core/nav/nav.component.html
@@ -18,6 +18,9 @@
       </div>
     </li>
     <li>
+      <a routerLink="/cart" *ngIf="userService.isLogedin()">Cart</a>
+    </li>
+    <li>
       <a *ngIf="userService.isLogedin()" (click)="logoutHandler()">Logout</a>
     </li>
   </ul>
