Login displays errors

--- a/playtopia/src/app/user/login/login.component.html
+++ b/playtopia/src/app/user/login/login.component.html
@@ -38,7 +38,7 @@
               Password is required
             </p>
           </ng-container>
-
+<p class="error" *ngIf="errorMessage">{{ errorMessage }}</p>
           <button>Login</button>
         </form>
         <p>Don't have an account ?</p>
