--- a/playtopia/src/app/game/cart/cart.component.css
+++ b/playtopia/src/app/game/cart/cart.component.css
@@ -15,6 +15,10 @@ h2 {
 
 .cart {
   background-image: url("../../../assets/BackGroud.png");
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 header {
@@ -77,4 +81,8 @@ button:hover {
     2px 2px 0 #ffffff;
   color: #000000;
   cursor: pointer;
+}
+
+.empty_cart{
+  margin: 100px;
 }
