--- a/playtopia/src/app/game/cart/cart.component.html
+++ b/playtopia/src/app/game/cart/cart.component.html
@@ -7,7 +7,6 @@
     <div class="item">
       <div class="img_div">
         <a [routerLink]="'/details/' + cartGame.details_id">
-
           <img [src]="cartGame.gameImage" [alt]="cartGame.gameName" />
         </a>
       </div>
@@ -18,8 +17,11 @@
       </div>
     </div>
   </div>
-
   <hr />
+  <div class="empty_cart" *ngIf="cartGames.length === 0">
+    <h2>Cart is empty!</h2>
+    <hr />
+  </div>
   <div class="total">
     <h2>Total: 70$</h2>
   </div>
