Fixed some types

--- a/playtopia/src/app/game/detail/detail.component.html
+++ b/playtopia/src/app/game/detail/detail.component.html
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="buttons" *ngIf="user_id === game._ownerId">
-        <button (click)="DeleteHangler()">Delete</button>
+        <button (click)="DeleteHandler()">Delete</button>
         <button routerLink="/edit/{{ game._id }}">Edit</button>
       </div>
     </div>
