--- a/playtopia/src/app/shared/loader/loader.component.css
+++ b/playtopia/src/app/shared/loader/loader.component.css
@@ -1,41 +1,21 @@
-/* HTML: <div class="loader"></div> */
 .loader {
-    width: 50px;
-    aspect-ratio: 1;
-    color: #398EB6;
-    position: relative;
-    animation: l40 .5s infinite alternate;
+  width: 300px;
+  height: 300px;
+  display: inline-block;
+  position: relative;
+  color: #FFF;
+  border: 1px solid;
+  box-sizing: border-box;
+  animation: fill 2s linear infinite alternate;
+  
+}
+
+@keyframes fill {
+  0% {
+    box-shadow: 0 0  inset;
   }
-  .loader:before,
-  .loader:after {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background-size: 25px 25px;
-    background-position: 0 0,100% 0,100% 100%,0 100%;
-    background-repeat: no-repeat;
+  100% {
+    box-shadow: 0 -300px inset;
   }
-  .loader:before {
-    background-image:
-      radial-gradient(farthest-side at top    left ,currentColor 96%,#0000),
-      radial-gradient(farthest-side at top    right,currentColor 96%,#0000),
-      radial-gradient(farthest-side at bottom right,currentColor 96%,#0000),
-      radial-gradient(farthest-side at bottom left ,currentColor 96%,#0000);
-    animation: l40-1 1s infinite;
-  }
-  .loader:after {
-    background-image: 
-      radial-gradient(farthest-side at top    left ,#0000 94%,currentColor 96%),
-      radial-gradient(farthest-side at top    right,#0000 94%,currentColor 96%),
-      radial-gradient(farthest-side at bottom right,#0000 94%,currentColor 96%),
-      radial-gradient(farthest-side at bottom left ,#0000 94%,currentColor 96%);
-    animation: l40-2 1s infinite;
-  }
-  @keyframes l40-1 {
-    0%,10%,90%,100% {inset:0}
-    40%,60% {inset:-10px}
-  }
-  @keyframes l40-2 {
-    0%,40%  {transform: rotate(0)}
-    60%,100%{transform: rotate(90deg)}
-  }
+}
+    
