--- a/playtopia/src/app/game/store/store.component.html
+++ b/playtopia/src/app/game/store/store.component.html
@@ -70,6 +70,6 @@
       <h2>IN ONE PLACE</h2>
     </div>
 
-    <app-games-row [games]="games"></app-games-row>
+    <app-games-row [games]="games" [isLoaded]="isLoaded"></app-games-row>
   </main>
 </body>
